Add route for serving HTML files from the public directory in Vercel configuration

--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,10 @@
   ],
   "routes": [
     {
+      "src": "/(.*\\.html)",
+      "dest": "/public/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "src/index.js"
     }
