Update Vercel routes to include HTML files and remove filesystem handling

--- a/vercel.json
+++ b/vercel.json
@@ -5,17 +5,13 @@
       "src": "src/index.js",
       "use": "@vercel/node"
     }
-  ],  
-  "routes": [
-    {
-      "handle": "filesystem"
-    },
+  ],    "routes": [
     {
       "src": "/redirect.html",
       "dest": "/public/redirect.html"
     },
     {
-      "src": "/(.*\\.(png|jpg|jpeg|gif|svg|ico|css|js))",
+      "src": "/(.*\\.(png|jpg|jpeg|gif|svg|ico|css|js|html))$",
       "dest": "/public/$1"
     },
     {
