--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.2",
+    "resend": "^4.7.0",
     "uuid": "^11.1.0"
   }
 }
